# reddit-network-explorer

./: LICENSE  README.md  docker-compose.yml  run_docker.sh  run_docker_test.sh
backend/: Dockerfile  app.py  pyproject.toml  requirements.txt
backend/server/: app.py  setup.py
backend/server/templates/: index.html
backend/tests/: test_backend.py
frontend/: .eslintignore  .eslintrc.js  Dockerfile  README.md  angular.json  package-lock.json  package-lock.json.REMOVED.git-id  package.json  tsconfig.json
frontend/src/: polyfills.ts  proxy-dev.conf.json  styles.scss
frontend/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
frontend/src/app/chatbox/: chatbox.component.html  chatbox.component.scss  chatbox.component.spec.ts  chatbox.component.ts
frontend/src/app/components/app/: app.component.html  app.component.ts
frontend/src/app/components/graph/: graph.component.html  graph.component.scss  (+1 more)
frontend/src/app/graph/: graph.component.spec.ts  graph.component.ts
frontend/src/app/live-feed/: live-feed.component.spec.ts  live-feed.component.ts
frontend/src/app/services/: api.service.mock.ts  api.service.ts
frontend/src/app/utils/: style.util.ts
memgraph/: Dockerfile  requirements.txt
memgraph/procedures/: publisher.py  sentiment_analyzer.py
memgraph/query-modules/: sentiment_analyzer.py
memgraph/transformations/: reddit.py
reddit-stream/: Dockerfile  app.py  dummy.py  requirements.txt  worldnews_data.jsonl.REMOVED.git-id
setup/: Dockerfile  requirements.txt  setup.py
transformations/: example.py  reddit.py
(+2 files in other folders)
