[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
Flask-SocketIO = "4.3.1"
python-engineio = "3.13.2"
python-socketio = "4.6.0"
gqlalchemy = "^1.0.5"
kafka-python = "^2.0.2"
Flask-Cors = "^3.0.10"
gunicorn = "^20.1.0"
eventlet = "0.30.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
